--- a/src/main/resources/templates/privacy.html
+++ b/src/main/resources/templates/privacy.html
@@ -14,13 +14,13 @@
           <h1 class="about-title">Политика конфиденциальности</h1>
           <ul class="about-subtitle">Общие положения
             <li>
-              Администрация веб-сайта <a th:href="@{head.url}" th:text="${head.siteName}"></a> ставит соблюдение прав и свобод
+              Администрация веб-сайта <a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a> ставит соблюдение прав и свобод
               граждан одним из важнейших условий осуществления своей деятельности.
             </li>
             <li>
-              Политика <span th:text="${head.siteName}"></span> в отношении обработки персональных данных
-              (далее по тексту — Политика) применяется ко всей информации, которую <span th:text="${head.siteName}"></span>
-              может получить о посетителях веб-сайта <a th:href="@{head.url}" th:text="${head.siteName}"></a>.
+              Политика <span th:text="${head.websiteName}"></span> в отношении обработки персональных данных
+              (далее по тексту — Политика) применяется ко всей информации, которую <span th:text="${head.websiteName}"></span>
+              может получить о посетителях веб-сайта <a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a>.
               Персональные данные обрабатывается в соответствии с ФЗ «О персональных данных» № 152-ФЗ.
             </li>
           </ul>
@@ -28,14 +28,14 @@
             <li>
               Веб-сайт - совокупность графических и информационных материалов, а также программ для ЭВМ и баз данных,
               обеспечивающих их доступность в сети интернет по сетевому адресу
-              <a th:href="@{head.url}" th:text="${head.url}"></a>.
+              <a th:href="@{head.websiteURL}" th:text="${head.websiteURL}"></a>.
             </li>
             <li>
-              Пользователь – любой посетитель веб-сайта <a th:href="@{head.url}" th:text="${head.siteName}"></a>.
+              Пользователь – любой посетитель веб-сайта <a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a>.
             </li>
             <li>
               Персональные данные – любая информация, относящаяся к Пользователю веб-сайта
-              <a th:href="@{head.url}" th:text="${head.siteName}"></a>.
+              <a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a>.
             </li>
             <li>
               Обработка персональных данных - любое действие с персональными данными, совершаемые с использованием ЭВМ,
@@ -58,7 +58,7 @@
               персональных на ЭВМ или любых других носителях.
             </li>
           </ul>
-          <ul class="about-subtitle"><span th:text="${head.siteName}"></span> может обрабатывать следующие персональные данные
+          <ul class="about-subtitle"><span th:text="${head.websiteName}"></span> может обрабатывать следующие персональные данные
             <li>
               Адрес электронной почты Пользователя;
             </li>
@@ -76,11 +76,11 @@
           <ul class="about-subtitle">Цели обработки персональных данных
             <li>
               Цель обработки адреса электронной почты, имения, фамилии Пользователя -
-              проведение авториации Пользователя на сайте <a th:href="@{head.url}" th:text="${head.siteName}"></a>.
-              Также <span th:text="${head.siteName}"></span> имеет право направлять Пользователю уведомление подтверждения
+              проведение авториации Пользователя на сайте <a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a>.
+              Также <span th:text="${head.websiteName}"></span> имеет право направлять Пользователю уведомление подтверждения
               активании учетной записи и прочего информирования. Пользователь всегда может отказаться
               от получения информационных сообщений, обративщий к Администрации веб-сайта
-              <a th:href="@{head.url}" th:text="${head.siteName}"></a> через форму обратной связи.
+              <a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a> через форму обратной связи.
             </li>
             <li>
               Обезличенные данные Пользователей, собираемые с помощью сервисов интернет-статистики, служат для сбора
@@ -89,13 +89,13 @@
           </ul>
           <ul class="about-subtitle">Правовые основания обработки персональных данных
             <li>
-              <span th:text="${head.siteName}"></span> обрабатывает персональные данные Пользователя только в случае их
+              <span th:text="${head.websiteName}"></span> обрабатывает персональные данные Пользователя только в случае их
               отправки Пользователем через формы, расположенные на сайте
-              <a th:href="@{head.url}" th:text="${head.siteName}"></a>. Отправляя свои персональные данные
-              <span th:text="${head.siteName}"></span>, Пользователь выражает свое согласие с данной Политикой.
+              <a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a>. Отправляя свои персональные данные
+              <span th:text="${head.websiteName}"></span>, Пользователь выражает свое согласие с данной Политикой.
             </li>
             <li>
-              <span th:text="${head.siteName}"></span> обрабатывает обезличенные данные о Пользователе в случае, если это
+              <span th:text="${head.websiteName}"></span> обрабатывает обезличенные данные о Пользователе в случае, если это
               разрешено в настройках браузера Пользователя (включено сохранение файлов «cookie» и использование
               технологии JavaScript).
             </li>
@@ -112,13 +112,13 @@
             <li>
               В случае выявления неточностей в персональных данных, Пользователь может актуализировать их через форму
               редактирования учетных данных Пользователя или оратиться к Администрации веб-сайта
-              <a th:href="@{head.url}" th:text="${head.siteName}"></a> через форму обратной связи с пометкой
+              <a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a> через форму обратной связи с пометкой
               «Актуализация персональных данных».
             </li>
             <li>
               Срок обработки персональных данных является неограниченным. Пользователь может в любой момент отозвать
               свое согласие на обработку персональных данных, направив Администрации веб-сайта
-              <a th:href="@{head.url}" th:text="${head.siteName}"></a> уведомление через форму обратной связи с пометкой
+              <a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a> уведомление через форму обратной связи с пометкой
               «Отзыв согласия на обработку персональных данных».
             </li>
           </ul>
@@ -126,11 +126,11 @@
             <li>
               Пользователь может получить любые разъяснения по интересующим вопросам, касающимся обработки его
               персональных данных, обратившись к Администрации веб-сайта
-              <a th:href="@{head.url}" th:text="${head.siteName}"></a> через форму обратной связи .
+              <a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a> через форму обратной связи .
             </li>
             <li>
               В данном документе будут отражены любые изменения политики обработки персональных данных
-              <span th:text="${head.siteName}"></span>. В случае существенных изменений Пользователю может быть выслана
+              <span th:text="${head.websiteName}"></span>. В случае существенных изменений Пользователю может быть выслана
               информация на указанный им электронный адрес.
             </li>
           </ul>
