--- a/src/main/resources/templates/termsofuse.html
+++ b/src/main/resources/templates/termsofuse.html
@@ -16,21 +16,21 @@
             <li>
               Данное пользовательское соглашение, устанавливает условия и порядок использования материалов
               (текстовых, графических, видео, либо любых других) веб-сайта
-              <a th:href="@{head.url}" th:text="${head.siteName}"></a> расположенного в Интернете по адресу:
-              <a th:href="@{head.url}" th:text="${head.url}"></a>.
+              <a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a> расположенного в Интернете по адресу:
+              <a th:href="@{head.websiteURL}" th:text="${head.websiteURL}"></a>.
             </li>
             <li>
-              Используя размещенную на веб-сайте <a th:href="@{head.url}" th:text="${head.siteName}"></a> информацию Вы
+              Используя размещенную на веб-сайте <a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a> информацию Вы
               обязуетесь соблюдать Правила закрепленные настоящим пользовательским соглашением.
             </li>
           </ul>
           <ul class="about-subtitle">
             <li>
-              1. Информация размещенная на веб-сайте <a th:href="@{head.url}" th:text="${head.siteName}"></a> носит
+              1. Информация размещенная на веб-сайте <a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a> носит
               новостной характер, т.е. раскрывается для дополнительного информирования заинтересованных пользователей.
             </li>
             <li>
-              2. Администрация веб-сайта <a th:href="@{head.url}" th:text="${head.siteName}"></a> не несет ответственности
+              2. Администрация веб-сайта <a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a> не несет ответственности
               за любые убытки, ущерб, гражданскую ответственность или расходы, понесенные в результате использования
               информации находящейся на веб-сайте, включая, без исключения, любые возможные в этой связи неисправности,
               ошибки. Использование информации осуществляется пользователем на свой страх и риск. Ни при каких условиях,
@@ -38,7 +38,7 @@
               прямой, косвенный, случайный, преднамеренный или непреднамеренный ущерб.
             </li>
             <li>
-              3. Веб-сайт <a th:href="@{head.url}" th:text="${head.siteName}"></a> может содержать сообщения о событиях,
+              3. Веб-сайт <a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a> может содержать сообщения о событиях,
               советы, мнения, отзывы, комментарии и другие публикации различных поставщиков информации. Администрация
               не определяет и не подтверждает точности или надежности любых советов, мнений, заявлений или иной
               информации, предоставляемой любыми поставщиками информации или любым другим физическим или юридическим
@@ -46,14 +46,14 @@
               Пользователем на свой риск.
             </li>
             <li>
-              4. Администрация веб-сайта <a th:href="@{head.url}" th:text="${head.siteName}"></a>, а также поставщики
+              4. Администрация веб-сайта <a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a>, а также поставщики
               информации или материалов, не несут ответственности ни перед одним пользователем или любым другим лицом
               за любые неточности, ошибки, пропуски, нарушения, удаления, дефекты, изменения или использование любых
               предлагаемых материалов или за их актуальность и точность.
             </li>
             <li>
               5. Если пользователь не удовлетворен любыми материалами веб-сайта
-              <a th:href="@{head.url}" th:text="${head.siteName}"></a> или любыми условиями пользования,
+              <a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a> или любыми условиями пользования,
               единственным и исключительным средством в распоряжении пользователя является добровольный отказ от
               использования веб-сайта.
             </li>
@@ -61,12 +61,12 @@
           <ul class="about-subtitle">Заключение
             <li>
               Текст и условия данного Пользовательского соглашения могут быть в любой момент изменены Правообладателем
-              веб-сайта<a th:href="@{head.url}" th:text="${head.siteName}"></a> в одностороннем порядке без особого
+              веб-сайта<a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a> в одностороннем порядке без особого
               предварительного и последующего уведомления. Изменение условий Соглашения производится в порядке
               опубликования Новой редакции Пользовательсного соглашения, которая вступает в силу для всех
-              пользователей и посетителей веб-сайта <a th:href="@{head.url}" th:text="${head.siteName}"></a>
+              пользователей и посетителей веб-сайта <a th:href="@{head.websiteURL}" th:text="${head.websiteName}"></a>
               с момента размещения Новой редакции на веб-сайте в разделе:
-              <a th:href="@{head.url}  + 'about/useragreement'" th:text="${'Пользовательское соглашение'}"></a>
+              <a th:href="@{head.websiteURL}  + 'about/useragreement'" th:text="${'Пользовательское соглашение'}"></a>
               и доступна для ознакомления в любой момент.
             </li>
           </ul>
