--- a/src/main/resources/templates/users/change-password.html
+++ b/src/main/resources/templates/users/change-password.html
@@ -11,15 +11,15 @@
     <div class="col" style="max-width: 768px;">
       <div class="main-block">
         <div class="row justify-content-center">
-          <h1 class="ttl-3">Изменение пароля</h1> <!--h3 fw-normal text-center my-3-->
+          <h1 class="ttl-3">Изменение пароля</h1>
           <div th:if="${message != null}" th:text="${message}"
                th:class="${messageType}" role="alert" style="width: auto;">
           </div>
-          <form method="POST" th:action="@{/users/changepassword}" class="text-center">
+          <form th:method="POST" th:action="@{/users/change-password}" class="text-center">
             <div class="row my-2 p-0 align-items-center justify-content-center">
               <label class="col-12 col-sm-10 col-md-4 lbl-3" for="password">Текущий пароль<sup>*</sup>:</label>
               <div class="col-12 col-sm-10 col-md-8">
-                <input th:field="*{password}" type="password" name="password" id="password"
+                <input type="password" name="password" id="password"
                        th:class="${passwordError != null} ? 'form-control form-control-sm is-invalid' : 'form-control form-control-sm' "
                        onKeyup="checkFormChangePassword()" placeholder="Введите текущий пароль" autofocus="true">
                 <span th:if="${passwordError != null}" th:text="${passwordError}" class="invalid-feedback"></span>
@@ -28,7 +28,7 @@
             <div class="row my-2 p-0 align-items-center justify-content-center">
               <label class="col-12 col-sm-10 col-md-4 lbl-3" for="newPassword">Новый пароль<sup>*</sup>:</label>
               <div class="col-12 col-sm-10 col-md-8">
-                <input th:field="*{newPassword}" type="password" name="newPassword" id="newPassword"
+                <input type="password" name="newPassword" id="newPassword"
                        th:class="${newPasswordError != null} ? 'form-control form-control-sm is-invalid' : 'form-control form-control-sm' "
                        onKeyup="checkFormChangePassword()" placeholder="Введите новый пароль">
                 <span th:if="${newPasswordError != null}" th:text="${newPasswordError}" class="invalid-feedback"></span>
@@ -37,13 +37,13 @@
             <div class="row my-2 p-0 align-items-center justify-content-center">
               <label class="col-12 col-sm-10 col-md-4 lbl-3" for="newPassword2">Подтверждение пароля<sup>*</sup>:</label>
               <div class="col-12 col-sm-10 col-md-8">
-                <input th:field="*{newPassword2}" type="password" name="newPassword2" id="newPassword2"
+                <input type="password" name="newPassword2" id="newPassword2"
                        th:class="${newPassword2Error != null} ? 'form-control form-control-sm is-invalid' : 'form-control form-control-sm' "
                        onKeyup="checkFormChangePassword()" placeholder="Подтвердите новый пароль">
                 <span th:if="${newPassword2Error != null}" th:text="${newPassword2Error}" class="invalid-feedback"></span>
               </div>
             </div>
-            <button class="btn btn-md btn-primary w-auto my-3" type="submit" id="btnChangePassword">Сохранить пароль</button>
+            <button type="submit" class="btn btn-sm btn-primary w-auto my-3" id="btnChangePassword">Сохранить пароль</button>
           </form>
         </div>
       </div>
