--- a/src/main/resources/templates/users/newpassword.html
+++ b/src/main/resources/templates/users/newpassword.html
@@ -1,18 +1,19 @@
 <!DOCTYPE HTML>
 <html class="h-100" data-lt-installed="true" xmlns:th="http://www.thymeleaf.org">
 <head th:insert="fragments/head :: head">></head>
-<body class="d-flex flex-column h-100 bg-light bg-gradient" style="">
+<body class="user-page flex-column">
 <header th:replace="fragments/header :: header" class="fixed-top"></header>
-<main class="container">
+<main class="container d-flex">
     <div class="row m-auto align-items-center justify-content-center">
-        <h1 class="h3 fw-normal text-center mb-3">Новый пароль</h1>
-        <div class="col-10 col-sm-8 col-md-5 col-lg-4 col-xl-3">
+        <h1 class="ttl-3">Новый пароль</h1>
+        <div class="col-10 col-md-8">
             <div th:if="${message != null}" th:text="${message}"
-                 th:class="${messageType}" role="alert">
+                 th:class="${messageType}" role="alert" style="width: auto;">
             </div>
-            <form method="POST" th:action="@{/recovery/{recoveryCode}(recoveryCode = ${user.getRecoveryCode()})}" th:object="${user}" class="text-center">
+            <form method="POST" th:action="@{/recovery/{recoveryCode}(recoveryCode = ${recoveryUser.getRecoveryCode()})}"
+                  th:object="${recoveryUser}" class="text-center">
                 <div class="mb-3 text-left">
-                    <label for="password" class="form-label">Новый пароль</label>
+                    <label for="password" class="form-label lbl-3">Новый пароль</label>
                     <input th:field="*{password}" type="password" name="password" id="password"
                            th:class="${#fields.hasErrors('password') || passwordError != null} ? 'form-control form-control-sm is-invalid' : 'form-control form-control-sm' "
                            onKeyup="checkFormNewPassword()" placeholder="Введите новый пароль" autofocus="true">
@@ -20,7 +21,7 @@
                     <span th:if="${passwordError != null}" th:text="${passwordError}" class="invalid-feedback"></span>
                 </div>
                 <div class="mb-3 text-left">
-                    <label for="password2" class="form-label">Подтверждение пароля</label>
+                    <label for="password2" class="form-label lbl-3">Подтверждение пароля</label>
                     <input th:field="*{password2}" type="password" name="password2" id="password2"
                            th:class="${#fields.hasErrors('password') || password2Error != null} ? 'form-control form-control-sm is-invalid' : 'form-control form-control-sm' "
                            onKeyup="checkFormNewPassword()" placeholder="Подтвердите пароль">
