--- a/src/main/resources/templates/users/registrationsuccess.html
+++ b/src/main/resources/templates/users/registrationsuccess.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html class="h-100" data-lt-installed="true" xmlns:th="http://www.thymeleaf.org">
 <head th:insert="fragments/head :: head"></head>
-<body class="d-flex flex-column h-100 bg-light bg-gradient" style="">
+<body class="user-page flex-column">
 <header th:replace="fragments/header :: header"></header>
-<main class="container" style="">
+<main class="container d-flex" style="min-height: calc(100vh - 80px - 120px);">
   <div class="row m-auto align-items-center justify-content-center" style="height: 300px;">
     <div class="col-12 col-sm-12 col-md-10 col-lg-8 text-center">
       <h1 class="ttl-2">Регистрация пользователя прошла успешно</h1>
