--- a/src/main/resources/templates/fragments/menu-profile.html
+++ b/src/main/resources/templates/fragments/menu-profile.html
@@ -32,7 +32,7 @@
         </li>
         <li th:if="${currentPage == 'userChangePassword'}" class="my-1">
             <a
-               th:href="@{/users/changepassword}"
+               th:href="@{/users/change-password}"
                th:class="${currentPage == 'userChangePassword'} ? 'menu-profile-lnk active' : 'menu-profile-lnk'">
                 <h6 class="my-0">Пароль</h6>
                 <p class="my-0" style="font-size: 0.9rem">Изменение пароля</p>
@@ -40,7 +40,7 @@
         </li>
         <li th:if="${currentPage != 'userChangePassword'}" class="my-1">
             <a
-               th:href="@{/users/changepassword}"
+               th:href="@{/users/change-password}"
                th:class="${user.activationCode != null || provider != null} ? 'menu-profile-lnk disable' : 'menu-profile-lnk'">
                 <h6 class="my-0">Пароль</h6>
                 <p class="my-0" style="font-size: 0.9rem">Изменение пароля</p>
