add news resources

--- a/src/main/resources/templates/news-resources.html
+++ b/src/main/resources/templates/news-resources.html
@@ -44,7 +44,7 @@
                                 <div class="my-1">
                                     <label class="lbl-3 mb-1" for="resourceKey">Resource Key</label>
                                     <input th:field="*{resourceKey}" type="text" name="resourceKey" id="resourceKey"
-                                           class="form-control form-control-sm" placeholder="Resource key" readonly>
+                                           class="form-control form-control-sm" placeholder="Resource key"> <!--readonly-->
                                 </div>
                                 <div class="my-1">
                                     <label class="lbl-3 mb-1" for="fullName">Full name<sup>*</sup></label>
